header changes, added img

--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
 </head>
 <body>
     <header>
-        <div class="titulo">
-            <h1>Mac Miller</h1>
+        <div class="site-title">
+            <div class="site-background" data-aos="fade-up" data-aos-delay="100">
+                <h3>Mac Miller</h3>
+            </div>
         </div>
     </header>
     <div class="navbar">
