--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mac Miller Tributer</title>
+    <title>
+        Mac Miller Tributer
+    </title>
+    <link rel="shortcut icon" href="img/favicon.ico">
     <link rel="stylesheet" href="style.css">
 
     <!-- css font awesome-->
