--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        Mac Miller Tributer
+        Mac Miller 
     </title>
     <link rel="shortcut icon" href="img/favicon.ico">
     <link rel="stylesheet" href="style.css">
@@ -146,11 +146,11 @@
         <h2>Footer</h2>
     </div>
 
-      <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-      <script src="./js/Jquery3.4.1.min.js"></script>
-      <script src="main.js"> 
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="./js/Jquery3.4.1.min.js"></script>
+    <script src="main.js"> 
         
-      </script>
+    </script>
 </body>
 
 </html>
